# CellularAutomata

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE  Makefile  README.md  ast.cc  ast.hh  compiler.cc  interpreter.cc  main.cc  parser.hh  runtime.c
Tests/: CMakeLists.txt  connway.ca  count.ca  countNeighbours.ca  flash.ca  on.ca  runtest.sh
examples/: flash.ca
